--- a/nablaweb/templates/jobs/jobs_detail.html
+++ b/nablaweb/templates/jobs/jobs_detail.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 
-<!--<h2>{{ job.headline }}</h2>-->
+<h2>{{ job.headline }}</h2>
+{{ job.lead_paragraph|markdown }}
 {{ job.body|markdown }}
 
 {% endblock %}
