Fikset en typo i footeren.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -248,9 +248,9 @@
         <!-- om nabla -->
         <div class="span4">
             <h2>Funnet en feil?</h2>
-            <p>Den Nabla-nettsiden er fremdeles i sin barndom. Har du funnet en feil, eller noe som burde forbedres? <a href="https://bitbucket.org/andreros/nablaweb/issues/new">Kontakt webkom!</a></p>
+            <p>Den nye Nabla-nettsiden er fremdeles i sin barndom. Har du funnet en feil, eller noe som burde forbedres? <a href="https://bitbucket.org/andreros/nablaweb/issues/new">Kontakt webkom!</a></p>
 
-            <p>For andre henvendelser: <a class="email" href="mailto:webkom(at)nabla.ntnu.no">webkom&nabla;nabla.no</a></p>
+            <p>For andre henvendelser til webkom: <a class="email" href="mailto:webkom(at)nabla.ntnu.no">webkom&nabla;nabla.no</a></p>
             
         </div>
         <!-- end om nabla -->
