Lagt til CSS-klasser på forsidenyheter, og enkel styling.

--- a/nablaweb/templates/news/news_summary_include.html
+++ b/nablaweb/templates/news/news_summary_include.html
@@ -4,7 +4,7 @@
 {% load classname %}
 
 
-<div class="span{% if narrow %}4{% else %}8{% endif %} {{ news|classname }}">
+<div class="span{% if narrow %}4{% else %}8{% endif %} news_item {{ news.content_type.model }}">
     {% if news.picture %}
 
         {% if narrow %}
