Fikset linken til å endre et arrangement i admin

--- a/nablaweb/templates/events/event_detail.html
+++ b/nablaweb/templates/events/event_detail.html
@@ -189,14 +189,14 @@
 
 {% endif %}
 
-
+{% if user.is_staff %}
 <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
         <li class="nav-header">Admin</li>
         <li><a href="{% url event_admin event.id %}"><i class="icon-glass"></i> Administrer</a></li>
-        <li><a href="#endre"><i class="icon-pencil"></i> Endre</a></li>
-        <li><a href="#slett"><i class="icon-trash"></i> Slett</a></li>
+        <li><a href="{% url admin:events_event_change event.id %}"><i class="icon-pencil"></i> Endre</a></li>
+        <li><a href="{% url admin:events_event_delete event.id %}"><i class="icon-trash"></i> Slett</a></li>
     </ul>
 </div>
-
+{%endif%}
 {% endblock %}
