--- a/nablaweb/templates/admin/base_site.html
+++ b/nablaweb/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 {% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="/"><img height="30" src="{{ STATIC_URL }}img/nabla_logo_white.svg" alt="Nabla"></a></h1>
+<h1 id="site-name"><a href="/"><img height="30" src="{{ STATIC_URL }}img/nabla_logo_white.png" alt="Nabla"></a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
