--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -42,7 +42,7 @@
 
 
 <header>
-    <a href="/"><img src="{{ STATIC_URL }}img/nabla_logo_black.svg" alt="Nabla"></a>
+    <a href="/"><img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla"></a>
 </header>
 
 
