Fikset bedpres påmelding.
Når går det ann å melde seg på bedpres via bpc med en knapp.
Også fikset noen feil med at ikke get_absolute_url ble brukt overalt.

--- a/nablaweb/templates/bedpres/bedpres_detail.html
+++ b/nablaweb/templates/bedpres/bedpres_detail.html
@@ -35,7 +35,7 @@
 
 {% include "content/includes/meta.html" with content=bedpres %}
 
-{% include "events/includes/info.html" with event=bedpres %}
+{% include "bedpres/includes/info.html" with event=bedpres %}
 
 
 {% if user.is_staff %}
