Rettet opp i epostadresser i footer

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -231,9 +231,9 @@
         <div class="span4 kontakt">
             <h2>Kontakt</h2>
 
-            <p>Du kan nå oss på <a class="email" href="mailto:nabla@nabla.no">nabla&nabla;nabla.no</a></p>
+            <p>Du kan nå oss på <a class="email" href="mailto:nabla(at)nabla.ntnu.no">nabla&nabla;nabla.ntnu.no</a></p>
 
-            <p>Bedrift? Kontakt oss på <a class="email" href="mailto:bedkom(at)nabla.ntnu.no">bedkom&nabla;nabla.no</a></p>
+            <p>Bedrift? Kontakt oss på <a class="email" href="mailto:bedkom(at)nabla.ntnu.no">bedkom&nabla;nabla.ntnu.no</a></p>
 
             <address>
                 Nabla <br>
@@ -250,7 +250,8 @@
             <h2>Funnet en feil?</h2>
             <p>Den nye Nabla-nettsiden er fremdeles i sin barndom. Har du funnet en feil, eller noe som burde forbedres? <a href="https://bitbucket.org/andreros/nablaweb/issues/new">Kontakt webkom!</a></p>
 
-            <p>For andre henvendelser til webkom: <a class="email" href="mailto:webkom(at)nabla.ntnu.no">webkom&nabla;nabla.no</a></p>
+            <p>For andre henvendelser til webkom: <a class="email"
+              href="mailto:webkom(at)nabla.ntnu.no">webkom&nabla;nabla.ntnu.no</a></p>
             
         </div>
         <!-- end om nabla -->
