La til i Annet nyttig. fix #2

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -74,6 +74,7 @@
                     </a>
                     <ul class="dropdown-menu" >
                         <li><a href="{% url quote_list %}">Gullkorn</a></li>
+                        <li><a href="{% url irc %}">#nabla på IRC</a></li>
                         <li><a href="{% url gallery.views.index %}">Galleri</a></li>
                         <li><a href="{% url accounts.views.list %}">Brukerliste</a></li>
                         <li><a href="{% url feedback.views.feedback_form %}">Gi tilbakemelding</a></li>
