--- a/nablaweb/templates/irc/default.html
+++ b/nablaweb/templates/irc/default.html
@@ -7,5 +7,5 @@
 
 {% block content %}
     <iframe src="http://gauss.nt.ntnu.no:9090/?channels=nabla&uio=MTE9MjM20f" width="750" height="450"></iframe>
-    <p>Her kan du koble til Nablas chattekanal paa IRC-nettverket FreeNode.</p>
+    <p>Her kan du koble til Nablas chattekanal på IRC-nettverket FreeNode.</p>
 {% endblock %}
