--- a/nablaweb/templates/accounts/user_registration.html
+++ b/nablaweb/templates/accounts/user_registration.html
@@ -5,8 +5,7 @@
 
 {% block content %}
 
-Her kan du registrere deg med ditt ntnubrukernavn.
-Hvis brukernavnet er godkjent vil du motta en epost med passord.
+<p>Her kan du registrere deg med ditt NTNU-brukernavn. Hvis brukernavnet er godkjent vil du motta en epost med passord.</p>
 
 <form method="POST" action="" >
   {% csrf_token %}
