--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -64,6 +64,7 @@
                 <li><a href="{% url event_list %}">Arrangement</a></li>
                 <li><a href="{% url jobs_list %}">Karriere</a></li>
                 <li><a href="/wiki">Wiki</a></li>
+                <li><a href="/forum">Forum</a></li>
 
                 <li class="dropdown">
                     <a href="#komiteer"
