Endret bugtracker-lenketeksten til noe mer logisk.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -250,9 +250,9 @@
         <!-- om nabla -->
         <div class="span4">
             <h2>Funnet en feil?</h2>
-            <p>Den nye Nabla-nettsiden er fremdeles i sin barndom. Har du funnet en feil, eller noe som burde forbedres? <a href="https://bitbucket.org/andreros/nablaweb/issues/new">Kontakt webkom!</a></p>
+            <p>Den nye Nabla-nettsiden er fremdeles i sin barndom. Har du funnet en feil, eller noe som burde forbedres? <a href="https://bitbucket.org/andreros/nablaweb/issues/new">Rapporter det her!</a></p>
 
-            <p>For andre henvendelser til webkom: <a class="email"
+            <p>For andre henvendelser til webkom, send en mail: <a class="email"
               href="mailto:webkom(at)nabla.ntnu.no">webkom&nabla;nabla.ntnu.no</a></p>
             
         </div>
