La til opengraph-metatagger og tilhørende model-funksjoner.
Burde funke, derfor fix #52.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -32,6 +32,8 @@
     <!-- Obligatory jQuery -->
     <!-- Loaded at the top for easier use -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    {% block more_head %}
+    {% endblock %}
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
