--- a/nablaweb/templates/events/includes/info.html
+++ b/nablaweb/templates/events/includes/info.html
@@ -9,7 +9,7 @@
         <td>Starter</td>
         <td>
             <time datetime="{{ event.event_start|date:"c" }}">
-                <b>{{ event.event_start|naturalday }} kl. {{ event.event_start|date:"G:i" }}</b>
+                <b>{{ event.event_start|naturalday }} kl. {{ event.event_start|date:"H:i" }}</b>
             </time>
         </td>
     </tr>
@@ -20,7 +20,7 @@
         <td>Slutter</td>
         <td>
             <time datetime="{{ event.event_end|date:"c" }}">
-                {{ event.event_end|naturalday }} kl. {{ event.event_end|date:"G:i" }}
+                {{ event.event_end|naturalday }} kl. {{ event.event_end|date:"H:i" }}
             </time>
         </td>
     </tr>
@@ -35,7 +35,7 @@
         <td>Registrering åpner</td>
         <td>
             <time datetime="{{ event.registration_start|date:"c" }}">
-                {{ event.registration_start|naturalday }} kl. {{ event.registration_start|date:"G:i" }}
+                {{ event.registration_start|naturalday }} kl. {{ event.registration_start|date:"H:i" }}
             </time>
         </td>
     </tr>
