--- a/nablaweb/templates/comments/form.html
+++ b/nablaweb/templates/comments/form.html
@@ -59,7 +59,7 @@
     </fieldset>
 
     <p>
-        Kommentarene bruker Markdown og MathJax. HTML blir fjernet.
+        Kommentarene bruker Markdown og MathJax. HTML blir fjernet. [[Ord]] i doble hakeparenteser lenker til wikien.
         <button style="display:none;" class="btn comment-help">Vis hjelp</button>
         <button style="display:none;" class="btn comment-help">Gjem hjelp</button>
     </p>
