La til RSS-feed for news/events/jobs. Vil vi ha RSS-feed for bare news kan det bli heller problematisk.

--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -3,6 +3,10 @@
 
 {% block title %}Stillingsannonser{% endblock %}
 
+{% block more_head %}
+<link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
+{% endblock %}
+
 {% block content %}
 {% if jobs_list %}
     {% for job in jobs_list %}
