--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -2,6 +2,10 @@
 
 {% block title %}Nyheter{% endblock %}
 
+{% block more_head %}
+<link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
+{% endblock %}
+
 {% block content %}
 
 <div class="row">
