--- a/nablaweb/templates/events/event_list.html
+++ b/nablaweb/templates/events/event_list.html
@@ -2,6 +2,10 @@
 
 {% block title %}Arrangement{% endblock %}
 
+{% block more_head %}
+<link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
+{% endblock %}
+
 {% block main %}
 
 <!-- calendar row -->
