--- a/nablaweb/templates/homepage/homepage_start.html
+++ b/nablaweb/templates/homepage/homepage_start.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load classname %}
 
+{% block more_head %}
+<link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
+{% endblock %}
+
 {% block content %}
 
 {% for content in content_list %}
