--- a/nablaweb/templates/events/event_list.html
+++ b/nablaweb/templates/events/event_list.html
@@ -61,7 +61,7 @@
                     {% for event in day.events %}
                         <li>
                             <b class="icon-cog"></b>
-                            <a href="{{ event.get_absolute_url }}">{{ event.short_name }}</a>
+                            <a href="{{ event.get_absolute_url }}">{{ event.get_short_name }}</a>
                         </li>
                     {% endfor %}
                 </ul>
