Fikset en haug med jobs-ting, inkl. templates og models.
jobs trenger reset av db.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -179,7 +179,10 @@
     <!-- content -->
     <div class="span8">
         {% block content %} 
-        {% endblock content %}  
+        {% endblock content %}
+        
+        {% block breadcrumb %}
+        {% endblock breadcrumb %}
     </div> 
     <!-- end content container -->
     
