--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -7,14 +7,32 @@
 <link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
 {% endblock %}
 
+{% block sidebar %}
+{% include "jobs/sidebar_include.html" %}
+{% endblock %}
+
 {% block content %}
 {% if jobs_list %}
     {% for job in jobs_list %}
         <div class="row">
             <div class="span8">
-                <h2>{{ job.headline }}</h2>
-                <p><strong><a href="{{ job.company.get_absolute_url }}">{{ job.company.name }}</a> | </strong>Søknadsfrist<strong> {{ job.deadline_date }}
-                </strong><br/><strong>Relevant for {{ job.relevant_for_group.all|join:", " }}, årskull {{ job.relevant_for_year.all|join:", " }}</strong></p>
+                <table class="table jobslist_table">
+                <tbody>
+                    <tr>
+                        <td class="jobslist_td_title">Søknadsfrist</td>
+                        <td class="jobslist_td_content">{{ job.deadline_date|date:"d. F Y, H:i" }}</td>
+                    </tr>
+                    <tr>
+                        <td class="jobslist_td_title">Lagt inn</td>
+                        <td>{{ job.created_date|date:"d. F Y, H:i" }}</td>
+                    </tr>
+                    <tr>
+                        <td class="jobslist_td_title">Relevant for</td>
+                        <td>{{ job.relevant_for_group.all|join:", " }}. Årskull {{ job.relevant_for_year.all|join:", " }}.</td>
+                    </tr>
+                </tbody>
+                </table>
+                <h2>{{ job.headline }} hos <a href="{{job.company.get_absolute_url }}">{{ job.company.name }}</a></h2>
                 {{ job.lead_paragraph|markdown }}
                 {{ job.body|markdown }}
                 <p><a class="btn" href="{{ job.get_absolute_url }}">Les mer &raquo;</a></p>
